--- a/templates/admin_panel/unit/show.html.twig
+++ b/templates/admin_panel/unit/show.html.twig
@@ -22,7 +22,7 @@
 
         </tr>
         <tr>
-    {% for doctor in doctors %}
+    {% for doctor in units %}
         <td>{{ doctor.unit }}</td>
         <td>{{ doctor.id }}</td>
         <td>{{ doctor.numPwz }}</td>
