--- a/templates/emails/registration.html.twig
+++ b/templates/emails/registration.html.twig
@@ -1,3 +1,10 @@
 <p>Zarejestrowałeś się w naszej przychodni jako {{ name }} {{ lastName }}.</p>
-<p>Kliknij w podany link żeby potwierdzić rejestrację i adres email!</p>
+<p>Kliknij w podany niżej link aby dokończyć rejestrację i aktywować konto.</p>
 <a href="{{ link }}">{{ link }}</a>
+
+
+
+
+
+
+
