--- a/templates/admin_panel/work_time/_form.html.twig
+++ b/templates/admin_panel/work_time/_form.html.twig
@@ -1,14 +1,18 @@
 
     {{ form_start(form, {'attr': {'class':'form hidden'}})}}
 
+    <div class="form-item-col">
     {{ form_label(form.day, 'Dzień tygodnia')}}
     {{ form_widget(form.day)}}
-    
+    </div>
+    <div class="form-item-col">
     {{ form_label(form.start, 'Początek pracy')}}
     {{ form_widget(form.start)}}
-    
+    </div>
+    <div class="form-item-col">
+
     {{ form_label(form.end, 'Koniec pracy')}}
     {{ form_widget(form.end)}}
-    
+</div>    
     <button class="form-btn">Dodaj</button>
     {{ form_end(form)}}
